# gecko-sdk-cmake

./: CMakeLists.txt  README.md
cmake/: FindGeckoSDK.cmake
cmake/gecko_sdk/: bsp.cmake  emlib.cmake  rail_lib.cmake
cmake/gecko_sdk/bootloader/: interface.cmake
cmake/gecko_sdk/emdrv/: dmadrv.cmake  gpioint.cmake
cmake/gecko_sdk/kit_drivers/: retargetio.cmake  retargetserial.cmake  retargetswo.cmake
cmake/toolchains/: arm-cortex-m33.cmake  arm-cortex-m4.cmake
cmake/utils/: generate_artifacts.cmake  openocd.cmake
examples/hello-world/: CMakeLists.txt  CMakePresets.json  main.c
examples/serial-debug/: CMakeLists.txt  CMakePresets.json  arm-cortex-m33.cmake  main.c
examples/switch-led/: CMakeLists.txt  main.c
